--- a/1-amazon/public/scss/components/_main.scss
+++ b/1-amazon/public/scss/components/_main.scss
@@ -1,5 +1,9 @@
 @use '../variables/index' as var;
 
+.highlight {
+    box-shadow:  0 0 4px #0096c7;
+    transition: box-shadow .3s ease-in-out;
+}
 
 #main {
     padding-top: 10rem;
@@ -8,11 +12,13 @@
         display: flex;
         flex-direction: column;
         gap: 3rem;
+        
         &__image {
             width: 100px;
             height: 60px;
             object-fit: contain;
             cursor: pointer;
+            border-radius: 5px;
         }
     }
 
