--- a/1-amazon/public/css/style.css
+++ b/1-amazon/public/css/style.css
@@ -143,9 +143,11 @@
 }
 #main .main-image {
   align-self: center;
+  position: relative;
 }
 #main .main-image__image {
   width: 100%;
+  object-fit: contain;
 }
 
 .d-grid {
@@ -261,6 +263,16 @@ price
   text-align: center;
   color: #184e77;
   margin: 1rem 0;
+}
+
+.lens {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100px;
+  width: 100px;
+  background-color: rgba(0, 150, 199, 0.5);
+  pointer-events: none;
 }
 
 /*
