--- a/1-amazon/public/scss/components/_main.scss
+++ b/1-amazon/public/scss/components/_main.scss
@@ -24,8 +24,10 @@
 
     .main-image {
         align-self: center;
+        position: relative;
         &__image {
             width: 100%;
+            object-fit: contain;
         }
     }
 }
@@ -156,4 +158,15 @@ price
         color: #184e77;
         margin: 1rem 0;
     }
+}
+
+
+.lens {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100px;
+    width: 100px;
+    background-color: rgba(0, 150, 199, .5);
+    pointer-events: none;
 }
