--- a/1-amazon/public/css/style.css
+++ b/1-amazon/public/css/style.css
@@ -275,6 +275,22 @@ price
   pointer-events: none;
 }
 
+.result {
+  position: absolute;
+  top: 50%;
+  right: -150%;
+  height: 600px;
+  width: 700px;
+  z-index: 10;
+  transform: translateY(-50%) scale(0);
+  border-radius: 5px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.show-result {
+  transform: translateY(-50%) scale(1);
+}
+
 /*
 =====================
         RESET
