--- a/1-amazon/public/scss/components/_main.scss
+++ b/1-amazon/public/scss/components/_main.scss
@@ -170,3 +170,19 @@ price
     background-color: rgba(0, 150, 199, .5);
     pointer-events: none;
 }
+
+.result {
+    position: absolute;
+    top: 50%;
+    right: -150%;
+    height: 600px;
+    width: 700px;
+    z-index: 10;
+    transform: translateY(-50%) scale(0);
+    border-radius: 5px;
+    transition: transform .2s ease-in-out;
+} 
+
+.show-result {
+    transform: translateY(-50%) scale(1);
+}
