--- a/1-amazon/public/css/style.css
+++ b/1-amazon/public/css/style.css
@@ -291,6 +291,44 @@ price
   transform: translateY(-50%) scale(1);
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(35, 35, 35, 0.5);
+  height: 100%;
+  width: 100%;
+  z-index: 20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal__img {
+  display: block;
+}
+.modal__content {
+  background-color: #fff;
+  min-height: 300px;
+  min-width: 500px;
+  border-radius: 8px;
+  position: relative;
+  padding: 5rem;
+}
+.modal__content i {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  cursor: pointer;
+  user-select: none;
+  padding: 15px;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
+}
+.modal__content i:hover {
+  background-color: #ddd;
+  transition: all 0.3s ease-in-out;
+}
+
 /*
 =====================
         RESET
@@ -319,6 +357,16 @@ body {
   max-width: 1500px;
   padding: 0 1rem;
   margin: 0 auto;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ddd;
+  border-radius: 30px;
+  width: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
