--- a/1-amazon/public/scss/style.scss
+++ b/1-amazon/public/scss/style.scss
@@ -32,3 +32,12 @@ body {
     margin: 0 auto;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #ddd;
+    border-radius: 30px;
+    width: 10px;
+}
