--- a/1-amazon/public/css/style.css
+++ b/1-amazon/public/css/style.css
@@ -302,17 +302,33 @@ price
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out;
+  overflow-y: auto;
+  padding: 3rem;
 }
 .modal__img {
   display: block;
 }
 .modal__content {
   background-color: #fff;
-  min-height: 300px;
-  min-width: 500px;
+  width: 800px;
+  height: 500px;
   border-radius: 8px;
   position: relative;
   padding: 5rem;
+  margin-top: 2rem;
+  position: relative;
+}
+.modal__content img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 70%;
+  width: 80%;
+  object-fit: contain;
 }
 .modal__content i {
   position: absolute;
@@ -327,6 +343,12 @@ price
 .modal__content i:hover {
   background-color: #ddd;
   transition: all 0.3s ease-in-out;
+}
+
+.modal--active {
+  opacity: 1;
+  pointer-events: all;
+  transition: opacity 0.3s ease-in-out;
 }
 
 /*
