--- a/1-amazon/public/css/style.css
+++ b/1-amazon/public/css/style.css
@@ -285,6 +285,7 @@ price
   transform: translateY(-50%) scale(0);
   border-radius: 5px;
   transition: transform 0.2s ease-in-out;
+  background-color: #fff;
 }
 
 .show-result {
@@ -299,9 +300,6 @@ price
   height: 100%;
   width: 100%;
   z-index: 20;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.3s ease-in-out;
@@ -311,15 +309,22 @@ price
 .modal__img {
   display: block;
 }
+.modal__content--grabbing {
+  cursor: grabbing;
+}
 .modal__content {
   background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 800px;
   height: 500px;
   border-radius: 8px;
   position: relative;
   padding: 5rem;
   margin-top: 2rem;
-  position: relative;
+  cursor: grab;
 }
 .modal__content img {
   position: absolute;
