--- a/1-amazon/public/scss/components/_main.scss
+++ b/1-amazon/public/scss/components/_main.scss
@@ -181,6 +181,7 @@ price
     transform: translateY(-50%) scale(0);
     border-radius: 5px;
     transition: transform .2s ease-in-out;
+    background-color: #fff;
 } 
 
 .show-result {
