--- a/1-amazon/public/scss/components/_modal.scss
+++ b/1-amazon/public/scss/components/_modal.scss
@@ -6,9 +6,6 @@
     height: 100%;
     width: 100%;
     z-index: 20;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     opacity: 0;
     pointer-events: none;
     transition: opacity .3s ease-in-out;
@@ -19,16 +16,23 @@
         display: block; 
     }
 
+    &__content--grabbing {
+        cursor: grabbing;
+    }
+
     &__content {
         background-color: #fff;
-
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 800px;
         height: 500px;
         border-radius: 8px;
         position: relative;
         padding: 5rem;
         margin-top: 2rem;
-        position: relative;
+        cursor: grab;
 
         img {
             position: absolute;
