--- a/3_calculator/public/css/style.css
+++ b/3_calculator/public/css/style.css
@@ -63,6 +63,7 @@ body {
     font-size: 2.5rem;
     transition: font-size .2s ease-in-out;
     padding: .5rem;
+    word-wrap: break-word;
 }
 
 .change--font-size {
@@ -120,3 +121,8 @@ body {
     background-color: var(--equal-button)!important;
 }
 
+@media  screen and (max-width: 380px) {
+    #calculator {
+        transform: scale(.9);
+    }
+}
